Fix vertical align of urls in external links

--- a/src/components/core.css
+++ b/src/components/core.css
@@ -140,6 +140,7 @@
 	text-overflow: ellipsis;
 	left: 0;
 	right: 0;
+	top: -0.5em;
 	overflow: hidden;
 	position: absolute;
 	white-space: nowrap;
